Module4/blog/k8s/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespaces-admission-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: namespaces-admission-webhook
  template:
    metadata:
      labels:
        app: namespaces-admission-webhook
        app.kubernetes.io/name: namespaces-admission-webhook
    spec:
      containers:
      - name: namespaces-admission-webhook
        imagePullPolicy: Always
        image: "docker-repo.amana.vpn/sysadmin/namespaces-admission-webhook:latest"
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "1m"
          limits:
            memory: "2G"
            cpu: "1"
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs/"
          readOnly: true
      volumes:
      - name: certs
        secret:
          defaultMode: 0644
          secretName: "namespaces-admission-webhook"
