Module4/blog/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namespaces-admission-webhook
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: https
      port: 443
      targetPort: 5000
  selector:
    app: namespaces-admission-webhook
